--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         </div>
         <div class="weather-body">
             <p id="dateandtime"> </p>
+             <p id="alertbox"> </p>
              <img src="" alt="weather image" class="weather-img"> 
              <div class="weather-box">
                 <p class="temperature"> </p>
@@ -48,5 +49,6 @@
     </div>
     <script src="script.js"></script>
 </body>
+
 
 </html>
